--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,6 +490,7 @@ section .container {
 .interests .icon-box i {
   font-size: 32px;
   padding-right: 10px;
+  padding-top: 10px;
   line-height: 1;
 }
 
